# ai-test

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: defaults.jsonc
docs/: model_quality_decision.md
src/ai_testing/: __init__.py  cli.py  cli_common.py  cli_reporting.py  config.py  sample_data.py
src/ai_testing/classification_preprocessing/: __init__.py
src/ai_testing/cli/: __init__.py  parser.py
src/ai_testing/core/: __init__.py  artifacts.py  quality_gates.py  reports.py
src/ai_testing/data_acquisition/: __init__.py  common.py  kosik.py  rohlik.py
src/ai_testing/data_preprocessing/: __init__.py  grocery.py
src/ai_testing/data_splitting/: __init__.py
src/ai_testing/drift_testing/: __init__.py  run_drift.py
src/ai_testing/input_data_testing/: __init__.py  grocery.py
src/ai_testing/llm_exploratory_testing/: __init__.py  charters.py
src/ai_testing/ml_model_testing/: __init__.py  association.py  text_classifier.py
src/ai_testing/model_explainability/: __init__.py  text_classifier.py
src/ai_testing/model_testing/: __init__.py  association.py  text_classifier.py
src/ai_testing/model_training/: __init__.py  text_classifier.py
src/ai_testing/model_validation/: __init__.py  association.py  text_classifier.py
src/ai_testing/project_quality/: __init__.py  gates.py
src/ai_testing/reporting/: __init__.py  generic_markdown.py  run_markdown.py
tests/: conftest.py  test_cli_smoke.py  test_input_data_testing.py  test_mlops_tracking.py  test_model_quality.py  test_project_quality.py  test_run_tracking_regression.py
(+40 files in other folders)
