[project]
name = "ai-test-framework"
version = "0.1.0"
description = "Personal grocery order data acquisition adapters for AI testing datasets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.4",
    "pandas>=2.2",
    "pandera>=0.20",
    "pyarrow>=16",
    "pydantic>=2.8",
    "pydantic-settings>=2.3",
    "scikit-learn>=1.5",
]

[project.scripts]
ai-test = "ai_testing.cli:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pre-commit>=3.7",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "RUF",
    "SIM",
    "UP",
]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
packages = ["ai_testing"]
strict = true

[[tool.mypy.overrides]]
module = [
    "joblib",
    "sklearn.*",
]
ignore_missing_imports = true
